@@ -8,18 +8,16 @@
 	<artifactId>api-automation</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
-	<name>Test Automation Project</name>
-	<url>https://mycompany.com</url>
+	<name>testing with carina</name>
+	<url>http://mycompany.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<carina-core_version>8.0.4</carina-core_version>
 		<carina-aws-s3.version>1.0.0</carina-aws-s3.version>
 		<java.version>11</java.version>
-<!--		<zebrunner-agent.version>1.9.2</zebrunner-agent.version>-->
+		<zebrunner-agent.version>1.9.2</zebrunner-agent.version>
 		<suite>helloWorld</suite>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 
 	<repositories>
@@ -80,62 +78,23 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.3.8</version>
-		</dependency>
-		<dependency>    <!--jackson -->
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.13.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.14.1</version>
-		</dependency> <!--jackson -->
-
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>7.6.1</version>
-			<scope>test</scope>
+			<version>42.3.3</version>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-<!--				<version>3.10.1</version>-->
-<!--				<configuration>-->
-<!--					<release>${java.version}</release>-->
-<!--					<compilerArgs>-->
-<!--						<arg>-parameters</arg>-->
-<!--					</compilerArgs>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>${java.version}</release>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -149,17 +108,17 @@
 						</goals>
 					</execution>
 				</executions>
-<!--				<configuration>-->
-<!--					<artifactItems>-->
-<!--						<artifactItem>-->
-<!--							<groupId>com.zebrunner</groupId>-->
-<!--							<artifactId>agent-core</artifactId>-->
-<!--							<version>${zebrunner-agent.version}</version>-->
-<!--							<outputDirectory>${project.build.directory}/agent</outputDirectory>-->
-<!--							<destFileName>zebrunner-agent.jar</destFileName>-->
-<!--						</artifactItem>-->
-<!--					</artifactItems>-->
-<!--				</configuration>-->
+				<configuration>
+					<artifactItems>
+						<artifactItem>
+							<groupId>com.zebrunner</groupId>
+							<artifactId>agent-core</artifactId>
+							<version>${zebrunner-agent.version}</version>
+							<outputDirectory>${project.build.directory}/agent</outputDirectory>
+							<destFileName>zebrunner-agent.jar</destFileName>
+						</artifactItem>
+					</artifactItems>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -173,21 +132,6 @@
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
-				<executions>
-					<execution>
-						<id>default-cli</id>
-						<configuration>
-							<mainClass>com.solvd.laba.Main</mainClass>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
 		</plugins>
 	</build>
 </project>
